--- a/46_APIWithTokenHomework/Base.lproj/LaunchScreen.storyboard
+++ b/46_APIWithTokenHomework/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +17,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launchimage" translatesAutoresizingMaskIntoConstraints="NO" id="aC5-9N-h3A">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aC5-9N-h3A" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-20" id="E1d-TP-Kja"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aC5-9N-h3A" secondAttribute="trailing" constant="-20" id="GW0-uY-8Go"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="aC5-9N-h3A" secondAttribute="bottom" id="RjQ-7Q-nMh"/>
+                            <constraint firstItem="aC5-9N-h3A" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" id="kOg-Z5-btR"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Launchimage" width="640" height="1136"/>
+    </resources>
 </document>
